added profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -80,14 +80,14 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
-  avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  name             : "Sayandip De"
+  avatar           : "images/DSC_2323.JPG"
+  bio              : "Researcher at Eindhoven University of Technology"
+  location         : "Eindhoven, The Netherlands"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  googlescholar    : "https://scholar.google.nl/citations?user=v1Gj8BgAAAAJ&hl=en"
+  email            : "sayandip.de@tue.nl"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
