update prof picture

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sayandip De"
-  avatar           : "images/DSC_2323.JPG"
+  avatar           : "DSC_2323.JPG"
   bio              : "Researcher at Eindhoven University of Technology"
   location         : "Eindhoven, The Netherlands"
   employer         :
