--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sayandip De"
-  avatar           : "prof.png"
+  avatar           : "prof1.png"
   bio              : "Researcher at Eindhoven University of Technology"
   location         : "Eindhoven, The Netherlands"
   employer         :
